[workspace]
members = [
        "blinky",
        "temperature",
        "adc-manual",
        "adc-thermistor",
        "tmp36",
        "oled",
        "oled-rtfm",
        "serial-usb",
        "serial-bluetooth",
        "temperature-bluetooth"
]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
