[package]
name = "oled"
authors = ["stephanh <stephanh@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
version = "0.1.0"

[dependencies]
panic-halt = "~0.2"
microbit = "~0.8"
cortex-m = "~0.6"
cortex-m-rt = { version = "~0.6", features = ["device"] }
ssd1306 = "0.3.0-alpha.2"
embedded-graphics = "0.6.0-alpha.2"
embedded-hal = "~0.2"
cast = { version = "*", default-features = false }
heapless = "0.5.1"

[[bin]]
name = "oled"
test = false
bench = false
