[package]
name = "serial-bluetooth"
version = "0.1.0"
authors = ["stephanh <stephanh@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "~0.2"
microbit = "~0.8"
cortex-m-rt = { version = "~0.6", features = ["device"] }
nb = "0.1.2"
