[package]
name = "temperature-bluetooth"
version = "0.1.0"
authors = ["stephanh <stephanh@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "~0.2"
microbit = "~0.8"
cortex-m-rt = { version = "~0.6", features = ["device"] }
cortex-m-semihosting = "~0.3"
embedded-hal = "~0.2"
ssd1306 = "0.3.0-alpha.2"
embedded-graphics = "0.6.0-alpha.2"
cast = { version = "*", default-features = false }
heapless = "0.5.1"
cortex-m-rtfm = "0.5.1"

[[bin]]
name = "temperature-bluetooth"
test = false
bench = false
